--- a/RUPS_desktop/MainWindow.xaml
+++ b/RUPS_desktop/MainWindow.xaml
@@ -6,7 +6,21 @@
         xmlns:local="clr-namespace:RUPS_desktop"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
-    <Grid>
 
-    </Grid>
+    <Border CornerRadius="5" BorderThickness="1" Background="white" BorderBrush="red">
+        <Grid Margin="5,5,5,2">
+            <StackPanel VerticalAlignment="Top" HorizontalAlignment="Center" Orientation="Horizontal" Height="50">
+                <Button Name="HomePage_btn" Click="HomePage_btn_Click" Width="100" Margin="10, 5, 10, 5" Padding="5" Background="#002171" Foreground="#fbc02d">
+                    <TextBlock>Domov</TextBlock>
+                </Button>
+                <Button Name="ListPage_btn" Click="ListPage_btn_Click" Width="100" Margin="10, 5, 10, 5" Padding="5" Background="#0d47a1" Foreground="white">
+                    <TextBlock>Seznam postajališč</TextBlock>
+                </Button>
+                <Button Name="MapPage_btn" Click="MapPage_btn_Click" Width="100" Margin="10, 5, 10, 5" Padding="5" Background="#0d47a1" Foreground="white">
+                    <TextBlock>Iskalnik postajališč</TextBlock>
+                </Button>
+            </StackPanel>
+            <Frame Name="MainFrame" NavigationUIVisibility="Hidden"></Frame>
+        </Grid>
+    </Border>
 </Window>
