--- a/RUPS_desktop/MapPage.xaml
+++ b/RUPS_desktop/MapPage.xaml
@@ -4,11 +4,18 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:RUPS_desktop"
+      xmlns:m="clr-namespace:Microsoft.Maps.MapControl.WPF;assembly=Microsoft.Maps.MapControl.WPF"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
       Title="MapPage">
 
-    <Grid>
-        <Label VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="50">MapPage</Label>
+    <Grid Name="MainGrid" Height="Auto" Width="Auto">
+        <Grid.RowDefinitions>
+            <RowDefinition />
+        </Grid.RowDefinitions>
+
+        <m:Map Grid.Row="1" Center="37.806029,-122.407007" ZoomLevel="16" Height="Auto" CredentialsProvider="PpvXX6nNV4Vp10OM35hx~Bfi7OOQO-CUegXc3DsmBRA~ApJHMAB8Ioifh49pEdM9ytGwaF6702tJ2MetRbHIf5OKJ8OpmpXVeMyzIgLfTf3y"/>
+
+
     </Grid>
 </Page>
