--- a/RUPS_desktop/RegistrationPage.xaml
+++ b/RUPS_desktop/RegistrationPage.xaml
@@ -13,12 +13,12 @@
             <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center" Width="200">
                 <TextBlock FontSize="30" HorizontalAlignment="Center" Foreground="White">Registracija</TextBlock>
                 <TextBlock FontSize="16" Margin="10,10,10,0" Foreground="White">E-mail:</TextBlock>
-                <TextBox FontSize="16"></TextBox>
+                <TextBox Name="email" FontSize="16" TextChanged="Content_TextChanged"></TextBox>
                 <TextBlock FontSize="16" Margin="10,10,10,0" Foreground="White">Geslo:</TextBlock>
-                <PasswordBox FontSize="16"></PasswordBox>
+                <PasswordBox Name="Password" FontSize="16" PasswordChar="*" PasswordChanged="Content_TextChanged"></PasswordBox>
                 <TextBlock FontSize="16" Margin="10,10,10,0" Foreground="White">Ponovi geslo:</TextBlock>
-                <PasswordBox FontSize="16"></PasswordBox>
-                <Button Background="#fbc02d" Foreground="#002171" FontSize="16" Margin="10" MaxWidth="120" Height="38" Click="Registration_btn_Click">
+                <PasswordBox Name="PasswordConf" FontSize="16" PasswordChar="*" PasswordChanged="Content_TextChanged"></PasswordBox>
+                <Button Name="Register_btn" Background="#fbc02d" Foreground="#002171" FontSize="16" Margin="10" MaxWidth="120" Height="38" Click="Registration_btn_Click" IsEnabled="False">
                     <Button.Resources>
                         <Style TargetType="Border">
                             <Setter Property="CornerRadius" Value="8"/>
