--- a/RUPS_desktop/LoginPage.xaml
+++ b/RUPS_desktop/LoginPage.xaml
@@ -17,7 +17,7 @@
                 <TextBox Name="email" FontSize="16"></TextBox>
                 <TextBlock FontSize="16" Margin="10,10,10,0" Foreground="White">Geslo:</TextBlock>
                 <PasswordBox Name="password" FontSize="16"></PasswordBox>
-                <Button Background="#fbc02d" Foreground="#002171" FontSize="16" Margin="10" MaxWidth="120" Height="38" Click="Login_btn_Click">
+                <Button IsDefault="True" Background="#fbc02d" Foreground="#002171" FontSize="16" Margin="10" MaxWidth="120" Height="38" Click="Login_btn_Click">
                     <Button.Resources>
                         <Style TargetType="Border">
                             <Setter Property="CornerRadius" Value="8"/>
