--- a/RUPS_desktop/HomePage.xaml
+++ b/RUPS_desktop/HomePage.xaml
@@ -9,7 +9,32 @@
       Title="HomePage">
 
     <Grid>
-        <Label VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="50">HomePage</Label>
-        
+        <StackPanel HorizontalAlignment="Center">
+            <Label VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="30">OBVESTILA</Label>
+            <StackPanel Orientation="Horizontal">
+                <TextBlock Width="50">Naslov: </TextBlock>
+                <TextBox Name="title" Width="200"></TextBox>
+            </StackPanel>
+            <StackPanel Orientation="Horizontal">
+                <TextBlock Width="50">Vsebina: </TextBlock>
+                <TextBox Name="content" Width="200"></TextBox>
+            </StackPanel>
+            <Button Width="100" Click="postNotice">Dodaj obvestilo</Button>
+            <TextBlock>Seznam obvestil:</TextBlock>
+            <ItemsControl x:Name="ic">
+                <ItemsControl.ItemTemplate>
+                    <DataTemplate>
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition />
+                                <ColumnDefinition />
+                            </Grid.ColumnDefinitions>
+                            <TextBlock Text="{Binding title}" FontSize="20" />
+                            <TextBlock Text="{Binding content}" FontSize="20" Grid.Column="1" />
+                        </Grid>
+                    </DataTemplate>
+                </ItemsControl.ItemTemplate>
+            </ItemsControl>
+        </StackPanel>
     </Grid>
 </Page>
