--- a/RUPS_desktop/MainWindow.xaml
+++ b/RUPS_desktop/MainWindow.xaml
@@ -7,28 +7,36 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
 
-    <Border CornerRadius="5" BorderThickness="1" Background="white" BorderBrush="red">
-        <Grid Margin="5,5,5,2">
+    <Border>
+        <Grid Background="#0d47a1">
             <Grid.RowDefinitions>
                 <RowDefinition Height="55"/>
                 <RowDefinition />
             </Grid.RowDefinitions>
-            <StackPanel Grid.Row="0" VerticalAlignment="Top" HorizontalAlignment="Center" Orientation="Horizontal" Height="50">
-                <Button Name="HomePage_btn" Click="HomePage_btn_Click" Width="100" Margin="10, 5, 10, 5" Padding="5" Background="#002171" Foreground="#fbc02d">
-                    <TextBlock>Domov</TextBlock>
-                </Button>
-                <Button Name="ListPage_btn" Click="ListPage_btn_Click" Width="100" Margin="10, 5, 10, 5" Padding="5" Background="#0d47a1" Foreground="white">
-                    <TextBlock>Seznam postajališč</TextBlock>
-                </Button>
-                <Button Name="MapPage_btn" Click="MapPage_btn_Click" Width="100" Margin="10, 5, 10, 5" Padding="5" Background="#0d47a1" Foreground="white">
-                    <TextBlock>Iskalnik postajališč</TextBlock>
-                </Button>
-                <Button Name="Odjava_btn" Click="Odjava_btn_Click" Width="100" Margin="10, 5, 10, 5" Padding="5" Background="#0d47a1" Foreground="white">
-                    <TextBlock>Odjava</TextBlock>
-                </Button>
-            </StackPanel>
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="Auto"/>
+                </Grid.ColumnDefinitions>
+                <StackPanel Grid.Row="0" VerticalAlignment="Top" HorizontalAlignment="Left" Orientation="Horizontal" Height="50" >
+                    <Button Name="HomePage_btn" Click="HomePage_btn_Click" Margin="5, 5, 5, 5" BorderThickness="0" Padding="5" Background="#002171" Foreground="#fbc02d">
+                        <TextBlock>Domov</TextBlock>
+                    </Button>
+                    <Button Name="ListPage_btn" Click="ListPage_btn_Click" Margin="5, 5, 5, 5" BorderThickness="0" Padding="5" Background="#0d47a1" Foreground="white">
+                        <TextBlock>Seznam postajališč</TextBlock>
+                    </Button>
+                    <Button Name="MapPage_btn" Click="MapPage_btn_Click" Margin="5, 5, 5, 5" BorderThickness="0" Padding="5" Background="#0d47a1" Foreground="white">
+                        <TextBlock>Iskalnik postajališč</TextBlock>
+                    </Button>
+                </StackPanel>
+                <StackPanel Grid.Row="0" Grid.Column="1" VerticalAlignment="Top" HorizontalAlignment="Center" Orientation="Horizontal" Height="50">
+                    <Button Name="Odjava_btn" Click="Odjava_btn_Click" Width="100" Margin="10, 5, 10, 5" BorderThickness="0" Padding="5" Background="#0d47a1" Foreground="white">
+                        <TextBlock>Odjava</TextBlock>
+                    </Button>
+                </StackPanel>
+            </Grid>
             <ScrollViewer Grid.Row="1" VerticalScrollBarVisibility="Auto">
-                <Frame Name="MainFrame" NavigationUIVisibility="Hidden"></Frame>
+                <Frame Name="MainFrame" NavigationUIVisibility="Hidden" Background="White"></Frame>
             </ScrollViewer>
         </Grid>
     </Border>
